syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message UpdateSalesArrangementStateRequest {
	// ID updatovaneho SA
	int32 SalesArrangementId = 1;

	// Novy stav SA
	int32 State = 2;
}
